# voice

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  justfile
aec/pipewire/: 99-adele-echo-cancel.conf
aec/wireplumber/: 51-adele-aec.conf  adele-aec-target.lua
crates/assistant-connector/: Cargo.toml
crates/assistant-connector/src/: lib.rs
crates/assistant-connector/tests/: degraded_startup.rs  resubscribe_after_reconnect.rs
crates/assistant-dbus/: Cargo.toml
crates/assistant-dbus/src/: lib.rs
crates/audio-cpal/: Cargo.toml
crates/audio-cpal/src/: lib.rs  sink.rs  source.rs
crates/client-voice/: Cargo.toml
crates/client-voice/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: domain.rs  error.rs  lib.rs  ports.rs  resample.rs  sentence_buffer.rs  speech_text.rs
crates/core/src/domain/: state.rs
crates/core/src/ports/: assistant.rs  audio.rs  stt.rs  tts.rs  vad.rs  wake.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: calibration.rs  config.rs  cue.rs  main.rs  pipeline.rs  session.rs  tts_backend.rs  tts_service.rs  wake_tuning.rs
crates/dbus-interface/: Cargo.toml
crates/dbus-interface/src/: lib.rs
crates/dbus-interface/tests/: signal_emission.rs
crates/module/: Cargo.toml
crates/module/src/: builders.rs  config.rs  dictation.rs  endpointer.rs  lib.rs  speaker.rs  transcriber.rs  tts_backend.rs
crates/stt-whisper/: Cargo.toml
crates/stt-whisper/src/: lib.rs
crates/tts-kokoro/: Cargo.toml
crates/tts-kokoro/src/: lib.rs
crates/tts-piper/: Cargo.toml
crates/tts-piper/src/: lib.rs
crates/tts-polly/: Cargo.toml
crates/tts-polly/src/: lib.rs
crates/vad-silero/: Cargo.toml
crates/vad-silero/src/: lib.rs
crates/wake-rustpotter/: Cargo.toml
crates/wake-rustpotter/src/: lib.rs
scripts/: setup.sh
systemd/: adele-voice.service
systemd/dbus-1/: org.desktopAssistant.Voice.service
