[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/audio-cpal",
    "crates/wake-rustpotter",
    "crates/vad-silero",
    "crates/stt-whisper",
    "crates/tts-piper",
    "crates/tts-polly",
    "crates/tts-kokoro",
    "crates/assistant-connector",
    "crates/dbus-interface",
    "crates/module",
    "crates/daemon",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

adele-voice-core = { path = "crates/core" }
adele-voice-audio-cpal = { path = "crates/audio-cpal" }
adele-voice-wake-rustpotter = { path = "crates/wake-rustpotter" }
adele-voice-vad-silero = { path = "crates/vad-silero" }
adele-voice-stt-whisper = { path = "crates/stt-whisper" }
adele-voice-tts-piper = { path = "crates/tts-piper" }
adele-voice-tts-polly = { path = "crates/tts-polly" }
adele-voice-tts-kokoro = { path = "crates/tts-kokoro" }
adele-voice-assistant-connector = { path = "crates/assistant-connector" }
adele-voice-dbus-interface = { path = "crates/dbus-interface" }
adele-voice-module = { path = "crates/module" }

# Cross-repo path-dep on the chat clients' shared transport layer (sibling
# checkout; mirrors adele-gtk↔desktop-assistant). Gives the voice service the
# `Connector` + every orchestrator transport (UDS/WS/D-Bus).
desktop-assistant-client-common = { path = "../desktop-assistant/crates/client-common" }
