[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/audio-cpal",
    "crates/wake-rustpotter",
    "crates/vad-silero",
    "crates/stt-whisper",
    "crates/tts-piper",
    "crates/tts-polly",
    "crates/tts-kokoro",
    "crates/assistant-connector",
    "crates/client-voice",
    "crates/dbus-interface",
    "crates/module",
    "crates/daemon",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
notify = "8"
# FFT-based audio resampler. Shared by the core batch `resample` helper (used by
# the TTS backends to convert synthesis output to the playback rate) and by
# audio-cpal's streaming capture resampler.
rubato = "2"
# Pure-Rust CommonMark parser (no proc-macros, small, well-maintained). Used by
# the core speech-text sanitizer to turn markdown the LLM emits into clean prose
# before TTS, rather than reading "asterisk asterisk" aloud (voice#63).
pulldown-cmark = { version = "0.13", default-features = false }

adele-voice-core = { path = "crates/core" }
adele-voice-audio-cpal = { path = "crates/audio-cpal" }
adele-voice-wake-rustpotter = { path = "crates/wake-rustpotter" }
adele-voice-vad-silero = { path = "crates/vad-silero" }
adele-voice-stt-whisper = { path = "crates/stt-whisper" }
adele-voice-tts-piper = { path = "crates/tts-piper" }
adele-voice-tts-polly = { path = "crates/tts-polly" }
adele-voice-tts-kokoro = { path = "crates/tts-kokoro" }
adele-voice-assistant-connector = { path = "crates/assistant-connector" }
adele-voice-client-common = { path = "crates/client-voice" }
adele-voice-dbus-interface = { path = "crates/dbus-interface" }
adele-voice-module = { path = "crates/module" }

# Cross-repo path-dep on the chat clients' shared transport layer (sibling
# checkout; mirrors adele-gtk↔desktop-assistant). Gives the voice service the
# `Connector` + every orchestrator transport (UDS/WS/D-Bus).
desktop-assistant-client-common = { path = "../desktop-assistant/crates/client-common" }
# The orchestrator's wire types (e.g. `ClientToolRegistration`); client-common
# doesn't re-export all of them, so the connector reaches this directly. Same
# sibling source checkout as client-common (voice#61).
desktop-assistant-api-model = { path = "../desktop-assistant/crates/api-model" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
