[package]
name = "adele-voice-assistant-connector"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

# Assistant gateway backed by desktop-assistant's transport-agnostic `Connector`,
# so the voice service reaches the orchestrator over local UDS (default), remote
# WebSocket, or D-Bus — instead of a bespoke zbus proxy.
[dependencies]
adele-voice-core.workspace = true
desktop-assistant-client-common.workspace = true
# The `ClientToolRegistration` wire type the orchestrator expects (voice#61);
# client-common doesn't re-export it, so reach it directly via the sibling
# api-model path-dep.
desktop-assistant-api-model.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
# Per-turn idempotency keys (#39): a random v4 key so a retry after a dropped
# connection de-duplicates against the original turn at the orchestrator.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
# Integration test (voice#86): start with an unreachable orchestrator (no
# crash), then bring the real UDS orchestrator server up in-process and assert
# the gateway connects lazily on the next call.
desktop-assistant-uds = { path = "../../../desktop-assistant/crates/uds-interface" }
desktop-assistant-application = { path = "../../../desktop-assistant/crates/application" }
desktop-assistant-auth-jwt = { path = "../../../desktop-assistant/crates/auth-jwt" }
async-trait = "0.1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
