[package]
name = "adele-voice"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adele-voice"
path = "src/main.rs"

[dependencies]
adele-voice-core.workspace = true
adele-voice-audio-cpal.workspace = true
adele-voice-wake-rustpotter.workspace = true
adele-voice-vad-silero.workspace = true
adele-voice-stt-whisper.workspace = true
adele-voice-tts-piper.workspace = true
adele-voice-tts-polly.workspace = true
adele-voice-tts-kokoro.workspace = true
adele-voice-assistant-connector.workspace = true
adele-voice-dbus-interface.workspace = true
adele-voice-module.workspace = true
anyhow.workspace = true
dirs.workspace = true
notify.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

[dev-dependencies]
# `test-util` enables the paused-time test clock (#58) so the heartbeat / stall
# / budget tests run instantly instead of waiting out real timeouts.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
