[package]
name = "adele-voice-dbus-interface"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
adele-voice-core.workspace = true
anyhow.workspace = true
# `rt` + `time` for the timed-mute auto-unmute task (voice#124: MuteFor spawns a
# sleeper that re-enables voice); `sync` for the watch/mpsc control channels.
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true
zbus.workspace = true

[dev-dependencies]
# Hermetic signal-emission test (voice#85): a peer-to-peer zbus connection pair
# over an in-process socket, so we assert the signals actually go out without
# touching the live session bus / daemon. `rt` to spawn the forwarder.
# `test-util` drives the timed-mute unit tests' virtual clock (voice#124).
zbus = { version = "5", default-features = false, features = ["tokio", "p2p"] }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "net", "test-util"] }
futures-util = "0.3"

[lints]
workspace = true
