[package]
name = "adele-voice-stt-whisper"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
adele-voice-core.workspace = true
anyhow.workspace = true
whisper-rs = "0.16"
tracing.workspace = true
# `rt` for spawn_blocking and `time` for the per-decode timeout (#58).
tokio = { workspace = true }

[lints]
workspace = true
